--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,7 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 15px;
   margin-bottom: 20px;
+  height: 432px;
 }
 
 .post-container.title {
