--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 15px;
   margin-bottom: 20px;
-  height: 432px;
+  height: auto;
 }
 
 .post-container.title {
@@ -219,4 +219,26 @@ body {
 
 .like-button:active {
   color: #007bff;
+}
+
+.comment-field {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 92%;
+  font-size: 16px;
+  resize: vertical;
+}
+
+.comment-button {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.comment-button:hover {
+  background-color: #3e8e41;
 }
