--- a/src/App.css
+++ b/src/App.css
@@ -223,22 +223,23 @@ body {
 
 .comment-field {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 4px solid #007bff;
+  border-radius: 29px;
   width: 92%;
   font-size: 16px;
   resize: vertical;
 }
 
 .comment-button {
-  background-color: #4CAF50;
+  background-color: #007bff;
   color: #fff;
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
+  border-radius: 24px;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .comment-button:hover {
-  background-color: #3e8e41;
+  background-color: #0056b3;
 }
